<resources>
    <string name="app_name">wms</string>
    <string name="app_full_name">仓库管理系统</string>
    <string name="wms_common_back">返回</string>
    <string name="wms_common_set">设置</string>
    <string name="common_save">保存</string>
    <string name="common_clear">清空</string>
    <string name="wms_common_submit">提交</string>
    <string name="common_search">查询</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancle">取消</string>
    <string name="common_reset">重置</string>
    <string name="wms_common_add">添&#160;&#160;加</string>
    <string name="common_new">新建</string>
    <string name="wms_common_pwd">密码</string>
    <string name="wms_common_newpwd">新密码</string>
    <string name="wms_common_pwd_hint">请输入密码</string>
    <string name="wms_common_uid">账号</string>
    <string name="wms_common_uid_hint">请输入账号</string>
    <string name="wms_common_confirm_pwd">确认密码</string>
    <string name="wms_common_confirm_pwd_hint">请再次输入密码</string>
    <string name="wms_common_exception">系统异常，请联系系统管理员！</string>
    <string name="wms_common_submiting">提交中…</string>
    <string name="wms_common_submit_success">提交成功！</string>
    <string name="wms_common_submit_faild">提交失败！</string>
    <string name="wms_common_submit_no_data">没有数据可供提交！</string>
    <string name="wms_common_save_success">保存成功！</string>
    <string name="wms_common_save_failed">保存失败！</string>
    <string name="wms_common_saving">正在保存…</string>
    <string name="wms_common_clear_success">清空成功！</string>
    <string name="wms_common_clear_failed">清空失败！</string>
    <string name="wms_common_exit_confirm">您确定要退出该功能吗</string>
    <string name="wms_common_submit_confirm">您确定要提交吗？</string>
    <string name="wms_common_dealing">处理中，请稍后!</string>
    <string name="wms_common_export_success">导出成功！</string>
    <string name="wms_common_export_faild">导出失败！</string>
    <string name="common_edit_failed">编辑失败！</string>
    <string name="common_alert_confirm">确认</string>
    <string name="wms_common_delete_success">已删除！</string>
    <string name="wms_common_delete_faild">删除失败！</string>
    <string name="common_init_faild">系统初始化失败！</string>
    <string name="common_noinit_manager">请初始化设备！</string>
    <string name="common_noinit_general">请使用系统管理账号登录系统初始化设备！</string>
    <string name="common_nodevicenum">设备未编号！</string>
    <string name="common_wait">请稍后</string>
    <string name="common_click_to_load">点击加载更多…</string>
    <string name="common_loading">正在加载中…</string>
    <string name="common_loaded">数据已全部加载</string>
    <string name="common_gettoken_ok">令牌获取失败！</string>
    <string name="common_sync_ok">同步完成！</string>
    <string name="wms_common_sync_noallowsync">使用本地服务器，不可进行数据同步</string>
    <string name="wms_common_no_net">请连接网络</string>
    <string name="wms_common_download_error">数据下载失败</string>
    <string name="wms_common_local_save_error">本地添加失败</string>
    <string name="wms_common_getdata_failed">获取数据失败</string>
    <string name="wms_net_error">网络错误</string>
    <string name="common_connect_failed">联网失败，请检查本地网络连接！</string>
    <string name="common_image_content">图片</string>
    <string name="wms_common_exporting">正在导出…</string>
    <string name="wms_common_downloading">正在下载…</string>
    <string name="common_download_ok">下载完成！</string>
    <string name="wms_common_logining">正在登录…</string>
    <string name="wms_login_uid_hint">请输入账号</string>
    <string name="wms_login_uid_lengtherror">请填写账号！</string>
    <string name="wms_login_pwd_hint">请输入密码</string>
    <string name="wms_login_pwd_lengtherror">请填写密码！</string>
    <string name="wms_login_failed">账号或密码错误，请重新填写！</string>
    <string name="wms_login_title">用户登录</string>
    <string name="wms_login_login">登&#160;&#160;录</string>
    <string name="wms_login_register">注册新账号</string>
    <string name="wms_login_exit">退出</string>
    <string name="wms_forget_pwd">忘记密码</string>
    <string name="wms_edit_pwd">修改密码</string>
    <string name="wms_login_savepwd">记住密码</string>
    <string name="wms_login_pwd_error">密码不正确，请重新填写！</string>
    <string name="wms_login_server">服务器</string>
    <string name="wms_login_local">本地</string>
    <string name="wms_login_server1">服务1</string>
    <string name="wms_login_server2">服务2</string>
    <string name="wms_registe_title">账号注册</string>
    <string name="wms_registe_registe">注&#160;&#160;册</string>
    <string name="wms_registe_uid_lengtherror">请填写4位长度的账号！</string>
    <string name="wms_registe_pwd_lengtherror">请填写6&#8211;10位长度的密码！</string>
    <string name="wms_registe_confirmpwd_lengtherror">请填写6&#8211;10位长度的确认密码！</string>
    <string name="wms_registe_pwd_nosame">两次密码填写不一致！</string>
    <string name="wms_registe_uid_existed">账号已存在，请重新填写！</string>
    <string name="wms_registe_success">注册成功！</string>
    <string name="wms_registe_faild">注册失败！</string>
    <string name="wms_resetpwd_title">重置密码</string>
    <string name="wms_resetpwd_manager">管理员</string>
    <string name="wms_resetpwd_manager_hint">请输入管理员账号</string>
    <string name="wms_resetpwd_pwd_hint">请输入管理员密码</string>
    <string name="wms_resetpwd_login">登录</string>
    <string name="wms_resetpwd_uid_lengtherror">请填写4位长度的账号！</string>
    <string name="wms_resetpwd_manageruid_lengtherror">请填写4位长度的管理员账号！</string>
    <string name="wms_resetpwd_managerpwd_lengtherror">请填写6&#8211;10位长度的管理员密码！</string>
    <string name="wms_resetpwd_uid_noexist">账号不存在，请重新填写！</string>
    <string name="wms_resetpwd_manageruid_noexist">管理员账号不存在，请重新填写！</string>
    <string name="wms_resetpwd_managerpwd_error">管理员密码不正确！</string>
    <string name="wms_resetpwd_reset_success">密码已重置为六个0！</string>
    <string name="wmd_resetpwd_reset_faild">重置失败！</string>
    <string name="wms_editpwd_title">修改密码</string>
    <string name="wms_editpwd_oldpwd">旧密码</string>
    <string name="wms_editpwd_oldpwd_hint">请输入旧密码</string>
    <string name="wms_editpwd_uid_lengtherror">请填写4位长度的账号！</string>
    <string name="wms_editpwd_oldpwd_lengtherror">请填写6&#8211;10位长度的旧密码！</string>
    <string name="wms_editpwd_newpwd_lengtherror">请填写6&#8211;10位长度的新密码！</string>
    <string name="wms_editpwd_confirmnewpwd_lengtherror">请填写6&#8211;10位长度的确认密码！</string>
    <string name="wms_editpwd_newpwd_nosame">两次新密码填写不一致！</string>
    <string name="wms_editpwd_uid_noexist">账号不存在，请重新填写！</string>
    <string name="wms_editpwd_oldpwd_error">旧密码不正确！</string>
    <string name="wms_editpwd_success">修改成功！</string>
    <string name="wms_editpwd_faild">修改失败！</string>
    <string name="menu_first_wio">仓库出入库</string>
    <string name="menu_wio_in">入库</string>
    <string name="menu_wio_out">出库</string>
    <string name="menu_wio_search_barcode">条码查询</string>
    <string name="menu_wio_search_thdnum">单号查询</string>
    <string name="menu_wio_check">盘点</string>
    <string name="menu_first_mio">网点出入库</string>
    <string name="menu_mio_in">入库</string>
    <string name="menu_mio_out">出库</string>
    <string name="menu_mio_check">盘点</string>
    <string name="menu_first_setting">系统管理</string>
    <string name="mio_scan">扫&#160;&#160;描</string>
    <string name="mio_scan_mbarcode">扫描条码</string>
    <string name="mio_scaned_barcode">已扫描条形码：</string>
    <string name="min_title">网点入库</string>
    <string name="mout_title">网点出库</string>
    <string name="mout_sendperson_null">请选择送货师傅！</string>
    <string name="mio_send_person">送货师傅</string>
    <string name="mcheck_title">网点盘点</string>
    <string name="record_in">入库记录</string>
    <string name="record_out">出库记录</string>
    <string name="record_in_thdnum">入库单号</string>
    <string name="record_in_intype">入库方式</string>
    <string name="record_out_outtype">出库方式</string>
    <string name="record_jxs_search">搜索</string>
    <string name="record_out_thdnum">送货单号</string>
    <string name="record_out_dbdnum">调拨单号</string>
    <string name="record_barcode">条形码</string>
    <string name="record_added_barcode">已添加条形码：</string>
    <string name="wms_record_barcode_null">请填写或扫描条形码！</string>
    <string name="wms_record_barcode_exist">条码已存在！</string>
    <string name="record_thdNum_default">00000000</string>
    <string name="record_tran_lengtherror">请选择物流信息！</string>
    <string name="record_barcode_lengtherror">请添加条形码！</string>
    <string name="record_warehouse">仓库货位</string>
    <string name="record_warehouse_value">021</string>
    <string name="record_warehouse_line">/</string>
    <string name="wms_title">仓库入库</string>
    <string name="win_barCode">条形码</string>
    <string name="win_scan"></string>
    <string name="win_jxsNum">经销商编号</string>
    <string name="win_jxsNum_hint">请输入经销商编号</string>
    <string name="win_jxsNum_lengtherror">请输入经销商编号！</string>
    <string name="win_thdNum_hint">请输入入库单号</string>
    <string name="wms_input_hint">输入关键字进行搜索</string>
    <string name="win_thdNum_lengtherror">请输入入库单号！</string>
    <string name="win_warehouse_hint">请选择仓库货位</string>
    <string name="win_barCode_hint">请输入或扫描条形码</string>
    <string name="win_uid">入库人</string>
    <string name="win_createDate">入库时间</string>
    <string name="in_info_title">入库记录详细</string>
    <string name="wout_title">仓库出库</string>
    <string name="wout_jxsNum">经销商编号</string>
    <string name="wout_barCode">条形码</string>
    <string name="wout_barCode_hint">请输入或扫描条形码</string>
    <string name="wout_scan"></string>
    <string name="wout_thdnum_hint">请输入或扫描送货单号</string>
    <string name="wout_dbdnum_hint">请输入调拨单号</string>
    <string name="wout_thdNum_lengtherror">请输入出库单号!</string>
    <string name="wout_warehouse_hint">请输入仓库货号</string>
    <string name="wout_jxsNum_hint">请输入经销商编号</string>
    <string name="wout_jxsNum_lengtherror">请输入经销商编号！</string>
    <string name="wout_uid">出库人</string>
    <string name="wout_createDate">出库时间</string>
    <string name="wout_transport_title">物流信息</string>
    <string name="wcheck_title">仓库盘点</string>
    <string name="transport_select_title">选择物流信息</string>
    <string name="transport_new_title">新建物流信息</string>
    <string name="transport_edit_title">编辑物流信息</string>
    <string name="transport_wuliu">物流公司</string>
    <string name="transport_wuliu_hint">请选择物流公司</string>
    <string name="transport_carnum">车牌号</string>
    <string name="transport_carnum_hint">请选择车牌号</string>
    <string name="transport_driver">司机</string>
    <string name="transport_driver_hint">请选择司机</string>
    <string name="transport_senddate">发车日期</string>
    <string name="transport_senddate_hint">请选择发车日期</string>
    <string name="transport_sendtime">发车时间</string>
    <string name="transport_sendtime_hint">请选择发车时间</string>
    <string name="transport_open_online">请在设置中打开联网设置</string>
    <string name="out_info_title">出库记录详细</string>
    <string name="history_in_title">入库记录</string>
    <string name="history_out_title">出库记录</string>
    <string name="history_search_condition">查询条件</string>
    <string name="history_search_confirm">确定</string>
    <string name="history_query_hint">查找记录</string>
    <string name="export_all">导出全部数据</string>
    <string name="export_date">按起止日期导出数据</string>
    <string name="export_startdate">开始日期</string>
    <string name="export_enddate">结束日期</string>
    <string name="export_startdate_hint">请选择开始日期</string>
    <string name="export_enddate_hint">请选择结束日期</string>
    <string name="export_startdate_lengtherror">请选择开始日期!</string>
    <string name="export_enddate_lengtherror">请选择结束日期!</string>
    <string name="export_nodata">无数据可供导出!</string>
    <string name="datamanage_sysncdata">同步数据</string>
    <string name="scan_open_failderror">激光扫描设备打开失败！</string>
    <string name="scan_failed">扫描失败！</string>
    <string name="scan_text">将条码放入框内, 即可自动扫描</string>
    <string name="scan_title">扫描条码</string>
    <string name="scan_continue">继续扫描</string>
    <string name="scan_break">结束扫描</string>
    <string name="setting_title">设置</string>
    <string name="wms_setting_devicenum_title">设置设备编号</string>
    <string name="setting_no_devicenum_tip">请为当前设备设置设备编号</string>
    <string name="wms_setting_devicenum_hint">请输入3位设备编号</string>
    <string name="wms_setting_devicenum">设备编号</string>
</resources>