<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wms_linearlayout_main">

    <!-- 系统标题栏 -->
    <RelativeLayout style="@style/wms_relativeLayout_title">
        <!-- 返回 -->
        <TextView
            android:id="@+id/tv_wms_set_devicenum_back"
            style="@style/wms_textview_left"
            android:text="@string/wms_common_back" />

        <!-- 标题 -->
        <TextView
            style="@style/wms_textview_title"
            android:text="@string/wms_setting_devicenum_title" />

        <!-- 保存 -->
        <TextView
            android:id="@+id/tv_wms_set_devicenum_save"
            style="@style/wms_textview_right"
            android:text="@string/common_save" />
    </RelativeLayout>

    <LinearLayout style="@style/wms_linearlayout_block" >
        <!-- 系统编号 -->
        <LinearLayout style="@style/wms_linearlayout_row_all" >
            <!-- 左侧标签 -->
            <TextView
                style="@style/wms_textview_label"
                android:text="@string/wms_setting_devicenum" />
            <!-- 右侧输入框 -->
            <EditText
                android:id="@+id/et_wms_set_devicenum"
                style="@style/wms_edittext_value"
                android:hint="@string/wms_setting_devicenum_hint"
                android:maxLength="3" >
            </EditText>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
