<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wms_linearlayout_main" >

    <LinearLayout style="@style/wms_linearlayout_block"
        android:layout_marginBottom="10dp" >

        <!-- 开始日期 -->

        <LinearLayout style="@style/linearlayout_row" >

            <!-- 标签 -->
            <TextView
                style="@style/textview_label11"
                android:text="@string/export_startdate" />

            <!-- 输入值 -->
            <TextView
                android:id="@+id/exportsetdate_tv_startdate"
                style="@style/textview_value21"
                android:hint="@string/export_startdate_hint">
            </TextView>
        </LinearLayout>

        <View style="@style/wms_view_common1" />
        <!-- 结束日期 -->

        <LinearLayout style="@style/linearlayout_row" >

            <!-- 标签 -->

            <TextView
                style="@style/textview_label11"
                android:text="@string/export_enddate" />

            <!-- 输入框 -->

            <TextView
                android:id="@+id/exportsetdate_tv_enddate"
                style="@style/textview_value21"
                android:hint="@string/export_enddate_hint">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>