<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wms_linearlayout_main" >

    <!-- 系统标题栏 -->

    <RelativeLayout
		style="@style/wms_relativeLayout_title" >

        <!-- 返回 -->

        <TextView
            android:id="@+id/transport_list_tv_back"
            style="@style/wms_textview_left"
            android:text="@string/wms_common_back" />
        <!-- 标题 -->

        <TextView
            style="@style/wms_textview_title"
            android:text="@string/transport_select_title" />
        
        <!-- 新建 -->
        <TextView
            android:id="@+id/transport_list_tv_new"
            style="@style/wms_textview_right"
            android:text="@string/common_new" />
    </RelativeLayout>   

    <!-- 可选项 -->
    <ListView
        android:id="@+id/transport_list_lv_item"
		style="@style/wms_listview_common1"
		android:layout_marginTop="10dp">
    </ListView>
</LinearLayout>