<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wms_linearlayout_main">

    <!-- 系统标题栏 -->

    <RelativeLayout style="@style/wms_relativeLayout_title">

        <!-- 返回 -->

        <TextView
            android:id="@+id/tv_search_thdnum_record_back"
            style="@style/wms_textview_left"
            android:text="@string/wms_common_back" />

        <!-- 标题 -->

        <TextView
            android:id="@+id/tv_search_thdnum_record_title"
            style="@style/wms_textview_title"
            android:text="@string/menu_wio_search_thdnum" />
    </RelativeLayout>

    <!-- 出库单信息 -->

    <LinearLayout style="@style/wms_linearlayout_block">

        <!-- 单号 -->

        <LinearLayout style="@style/wms_linearlayout_row_all">

            <TextView
                android:id="@+id/tv_search_thdnum_record_thdnum"
                style="@style/wms_textview_label" />

            <TextView
                android:id="@+id/tv_search_thdnum_record_thdnum_value"
                style="@style/wms_textview_value_right" />
        </LinearLayout>
    </LinearLayout>
    <!-- 已添加条形码 -->

    <TextView
        android:id="@+id/tv_search_thdnum_record_total_count"
        style="@style/wms_textview_common1"
        android:text="@string/record_added_barcode" />

    <!--条码列表-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_search_thdnum_record_barcode"
        style="@style/wms_swipeRefreshLayout">

        <ListView
            android:id="@+id/lv_search_thdnum_record_barCode"
            style="@style/wms_listview_common1"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>